apps/cyberchef/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: cyberchef
    app.kubernetes.io/part-of: cyberchef
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: pod
    app.kubernetes.io/name: cyberchef
    app.kubernetes.io/part-of: cyberchef
  type: ClusterIP
